# snake_game

./: Cargo.toml  README.md
src/: main.rs
src/lib/: colors.rs  game.rs  mod.rs  renderer.rs  shared.rs  snake.rs
src/lib/audio/: mod.rs
src/lib/graphic/: food.rs  game.rs  mod.rs  shared.rs  snake.rs
src/modules/: mod.rs
src/modules/graphic/: colors.rs  game.rs  snake.rs
